--- a/res/layout/note_editor.xml
+++ b/res/layout/note_editor.xml
@@ -20,7 +20,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     class="com.mokee.notepad.NoteEditor$LinedEditText"
-    android:background="@drawable/content_bg"
+    android:background="@android:color/white"
     android:capitalize="sentences"
     android:fadingEdge="vertical"
     android:gravity="top"
