--- a/res/layout/note_editor.xml
+++ b/res/layout/note_editor.xml
@@ -16,11 +16,11 @@
 -->
 
 <view xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/note"
+    android:id="@+id/text"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     class="com.mokee.notepad.NoteEditor$LinedEditText"
-    android:background="@android:color/white"
+    android:background="@null"
     android:capitalize="sentences"
     android:fadingEdge="vertical"
     android:gravity="top"
