--- a/res/layout/noteslist_item.xml
+++ b/res/layout/noteslist_item.xml
@@ -27,7 +27,8 @@
         android:layout_height="40sp"
         android:layout_weight="1"
         android:gravity="center_vertical"
-        android:paddingLeft="10dip"
+        android:paddingLeft="5dip"
+        android:textSize="25sp"
         android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:ellipsize="end" />
@@ -37,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="40sp"
         android:gravity="center_vertical"
-        android:paddingRight="10dip"    
+        android:paddingRight="5dip"    
         android:textSize="15sp"
         android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceLarge" />
